# curry

./: .gitignore  404.html  CONTRIBUTING.md  Dockerfile  Makefile  README.md  alembic.ini  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.devcontainer/: devcontainer.json
curry/: TODO.md  TODO.me
curry/block/: __init__.py  errors.py  models.py
curry/demo/: w3.py
curry/demo/existing_functions/: demo.py
curry/demos/custom_blocks/: demo.py
curry/demos/existing_functions/: demo.py  fake_methods.py
curry/demos/with_decorators/: demo.py
curry/dev_experiences/: dask_progress.py
curry/epices/: README.md
curry/epices/databases/: fake.py
curry/flow/: models.py  workflow.py
curry/methods/: __init__.py  manager.py
curry/models/: __init__.py  block.py  errors.py
curry/scheduler/: client.py
curry/schedulers/dask/: __init__.py  local_scheduler.py  local_test.py  slurm.py
curry/server/: main.py  package-lock.json  package.json  tailwind.config.js
curry/server/_models/: __init__.py
curry/server/migrations/: env.py  script.py.mako
curry/server/migrations/versions/: 0272aba68386_first.py  62aa2eab86c4_second.py
curry/server/static/: styles.css
curry/server/static/styles/: main.css
curry/server/styles/: main.scss
curry/server/templates/: base.html  index.html  item.html
curry/server/templates/components/: nav.html
curry/server/templates/layouts/: base-empty.html  base.html  user_base.html  workflow.html
curry/server/templates/pages/: builder.html  home.html  item.html  landing.html  projects.html  teams.html  workflow.html
curry/server/utils/: time.py
curry/utils/string/: uuid.py
curry/utils/time/: time.py
curry/utils/typing/: __init__.py  typing.py
curry/workflow/: __init__.py  workflow.py
docs/: index.md  modules.md
modules/: index.html
search/: search_index.json
tests/: test_foo.py
