[project]
name = "curry"
version = "0.0.1"
description = "Wrap dask scheduler to make it easy to buid datascience flow"
authors = [{ name = "Joris GUERRY", email = "j@9h.gg" }]
readme = "README.md"
keywords = ['python']
requires-python = ">=3.9,<=3.12"
dependencies = [
    "bokeh!=3.0.*,>=2.4.2",
    "dask[distributed]>=2023.5.0",
    "faker>=28.4.1",
    "fastapi[standard]>=0.115.0",
    "graphviz>=0.20.3",
    "jinja2>=3.1.4",
    "pandas>=2.0.3",
    "pydantic[email]>=2.8.2",
    "babel>=2.16.0",
    "pytz>=2024.1",
    "websockets>=13.0.1",
    "granian>=1.6.0",
]

[project.urls]
Homepage = "https://lakodo.github.io/curry/"
Repository = "https://github.com/lakodo/curry"
Documentation = "https://lakodo.github.io/curry/"

[tool.uv]
dev-dependencies = [
    "pytest>=7.2.0",
    "pre-commit>=2.20.0",
    "tox>=3.25.1",
    "deptry>=0.20.0",
    "mypy>=0.991",
    "pytest-cov>=4.0.0",
    "ruff>=0.0.235",
    "mkdocs>=1.4.2",
    "mkdocs-material>=8.5.10",
    "mkdocstrings[python]>=0.19.0",
    "ipython>=8.12.3",
    "ipykernel>=6.29.5",
    "pandas-stubs>=2.0.2.230605",
    "griffe-typingdoc>=0.2.7",
]


[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.mypy]
files = ["curry"]
disallow_untyped_defs = "True"
disallow_any_unimported = "True"
no_implicit_optional = "True"
check_untyped_defs = "True"
warn_return_any = "True"
warn_unused_ignores = "True"
show_error_codes = "True"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py39"
line-length = 120
fix = true
lint.select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
lint.ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
]

[tool.ruff.format]
preview = true

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["curry"]


[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]
